# 2025-p1-arshupadhyaya

./: README.md  pyproject.toml
todo/views/: routes.py
