[project]
name = "2025-p1-arshupadhyaya"
version = "0.1.0"
description = ""
authors = [
    {name = "Arsh Upadhyaya",email = "116279628+arshupadhyaya@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
